static/style.css
h1{
    font-family: Arial, Helvetica, sans-serif;
}

.container {
    position:fixed;
    left: 350px;
    padding-top: 20px;
    margin: 0;
}

.left-element {
    display: inline-block;
    float: left;
}

.right-element {
    display: inline-block;
    float: left;
    padding-left: 50px;
}
#handilabel{
    padding-top: 2000px;
    font-size: 150%;
    font-family: Arial, Helvetica, sans-serif;
}
h5{
    font-family: Arial, Helvetica, sans-serif;
}
p{
    font-family: Arial, Helvetica, sans-serif;
}

